# 27-cap2-ex8-weather

./: .gitignore  README.md  pyproject.toml
src/weather/: crew.py  main.py
src/weather/config/: agents.yaml  tasks.yaml
src/weather/tools/: weather_tool.py
